--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
     "lint": "eslint src",
     "prepublish": "npm run clean && npm run test && npm run flow && npm run lint && npm run build"
   },
-  "peerDependencies": {
-    "react": "^15 || ^16",
-    "react-dom": "^15 || ^16"
-  },
+  "peerDependencies": {},
   "dependencies": {
     "babel-runtime": "^6.26.0"
   },
