--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_script: npm run lint
 script: npm run test
 after_success: npm run coveralls
 
-branches:
-  only:
-    - master
+cache:
+    directories:
+        - "node_modules"
