--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "8.2.3",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "6.23.0",
     "babel-preset-stage-0": "6.24.1",
-    "coveralls": "3.0.0",
+    "coveralls": "^3.0.3",
     "cross-env": "5.1.4",
-    "enzyme": "3.3.0",
+    "enzyme": "^3.9.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.11.0",
