--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "flow-bin": "0.70.0",
     "flow-typed": "2.4.0",
     "fs-file-tree": "1.0.6",
-    "jest": "22.4.3",
+    "jest": "^24.7.1",
     "rimraf": "2.6.2",
     "rollup": "0.58.1",
     "rollup-plugin-babel": "3.0.3",
