--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,16 @@
 {
   "presets": [
-    [ "env", { "modules": false } ],
-    "stage-0",
-    "flow"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": 8
+        }
+      }
+    ],
+    "@babel/preset-flow"
   ],
-
-  "env": {
-    "test": {
-      "presets": [
-        "env"
-      ]
-    }
-  },
-
   "plugins": [
-    ["module-resolver", {
-      "root": ["./src"]
-    }],
-    "transform-runtime"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
