--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "8.2.3",
-    "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "6.23.0",
-    "babel-preset-stage-0": "6.24.1",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-flow": "7.0.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.1.0",
     "coveralls": "^3.0.3",
     "cross-env": "5.1.4",
     "enzyme": "^3.9.0",
@@ -64,8 +64,8 @@
     "fs-file-tree": "1.0.6",
     "jest": "^24.7.1",
     "rimraf": "2.6.2",
-    "rollup": "0.58.1",
-    "rollup-plugin-babel": "3.0.3",
+    "rollup": "0.60.0",
+    "rollup-plugin-babel": "4.3.0",
     "rollup-plugin-commonjs": "9.1.0",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-replace": "2.0.0",
