--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
   "automergeType": "pr",
   "rebaseStalePrs": null,
   "recreateClosed": false,
-  "schedule": "every weekend"
+  "prConcurrentLimit": 1,
+  "prCreation": "status-success"
 }
