--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-flow": "7.0.0",
     "babel-eslint": "10.0.1",
@@ -57,8 +57,8 @@
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.17.2",
     "eslint-plugin-jsx-a11y": "6.2.1",
-    "flow-bin": "0.97.0",
     "eslint-plugin-react": "7.12.4",
+    "flow-bin": "0.97.0",
     "flow-typed": "2.5.1",
     "fs-file-tree": "1.0.7",
     "jest": "24.7.1",
