--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "rollup-plugin-commonjs": "9.3.4",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-uglify": "3.0.0"
+    "rollup-plugin-uglify": "~3.0.0"
   }
 }
